--- a/SistemaDeUsuario/Views/Users/Deactivate.cshtml
+++ b/SistemaDeUsuario/Views/Users/Deactivate.cshtml
@@ -1,12 +1,12 @@
 ﻿@model SistemaDeUsuario.Models.User
 
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "Deactivate";
 }
 
-<h1>Delete</h1>
+<h1>Deactivate</h1>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Are you sure you want to deactivate this?</h3>
 <div>
     <h4>User</h4>
     <hr />
@@ -37,9 +37,9 @@
         </dd>
     </dl>
     
-    <form asp-action="Delete">
+    <form asp-action="Deactivate">
         <input type="hidden" asp-for="Id" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
+        <input type="submit" value="Deactivate" class="btn btn-danger" /> |
         <a asp-action="Index">Back to List</a>
     </form>
 </div>
